# Solana-bootacmp

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
anchor/: README.md
anchor/demo1/: Anchor.toml
anchor/demo1/tests/: demo1.ts
anchor/demo2/: Anchor.toml  package-lock.json
anchor/demo2/tests/: demo2.ts
anchor/nft-staking-demo/: Anchor.toml  Cargo.toml
anchor/nft-staking-demo/programs/nft-staking-demo/: Cargo.toml
anchor/nft-staking-demo/programs/nft-staking-demo/src/: lib.rs
js-to-rust/: Cargo.toml
js-to-rust/src/: main.rs
solana-candy-machine/: README.2.md  README.md  cache.json  config.json
solana-candy-machine/assets/: collection.json
solana-intro-client/: .gitignore  README.md  package-lock.json  package.json
solana-intro-client/assets/: zombie-collection.avif
solana-intro-client/src/: index.ts  lib.ts  sampleApps.ts
solana-intro-frontend-starter/: README.md  package-lock.json
solana-intro-frontend-starter/components/: AddressForm.tsx
solana-intro-frontend-starter/pages/: index.tsx
solana-movie-frontend-starter/: package-lock.json  package.json
solana-movie-frontend-starter/components/: AppBar.tsx  Card.tsx  Form.tsx  MovieList.tsx  WalletContextProvider.tsx
solana-movie-frontend-starter/models/: Movie.ts
solana-movie-frontend-starter/pages/: index.tsx
solana-nft-minter-front-end/: package-lock.json  package.json
solana-ping-frontend/components/: AppBar.tsx  PingButton.tsx  SendSol.tsx
solana-ping-frontend/pages/: _app.tsx  index.tsx
solana-ping-frontend/styles/: Home.module.css
(+15 files in other folders)
